@@ -249,6 +249,7 @@
 
 
 
+
                           In Popup" selected will show in the popup menu
                           regardless of w<font size="-1">hether any text
                             is or is not selected.<br>
@@ -265,6 +266,7 @@
                                   size="-1"><font size="-1"><font
                                       size="-1"><font size="-1"><font
                                           size="-1">/tmp/textfile</font></font></font></font></font></font></font></font></font>"|tail
+
 
 
 
@@ -334,10 +336,12 @@
 
 
 
+
                               of xterm and beyond</font></font> my
                           control :(<br>
                           <br>
                         </font>For very </font></font></font></font></font></font></font></font>complex
+
 
 
 
@@ -410,6 +414,7 @@
 
 
 
+
         one in /usr/share/KKEdit/tools ) you must have root privileges.</font><br>
       <hr size="2" width="100%"><br>
       <b><a name="prefsanc"></a></b><b>Preferences</b><br>
@@ -430,6 +435,7 @@
           The 'Run as Root Command' allows you to set your favorite
           graphical root privileges program, if this is blank a terminal
           will be used to ask for admin passwords ( <a href="#gtksui">See
+
 
 
 
@@ -527,6 +533,7 @@
           <img alt="popup" src="popup.png" width="606" height="640"><br>
           <br>
         </font></font><font size="-1"><a name="spellchk"></a></font><b>Spell
+
 
 
 
@@ -658,6 +665,7 @@
 
 
 
+
                         here</a><font size="-1"> )<font size="-1">, use
                           'gtksu --', ubuntu users may have to use
                           'gtksu -- sudo' to stop gtk3 complaining,
@@ -719,7 +727,9 @@
 
 
 
+
                                                   the <font size="-1">toolbar
+
 
 
 
@@ -754,6 +764,7 @@
                                                       size="-1">
                                                       searching
                                                       backwards </font>can
+
 
 
 
@@ -828,7 +839,9 @@
 
 
 
+
                                                         <font size="-1">A</font>ll'
+
 
 
 
@@ -864,6 +877,7 @@
                                                         confirm the
                                                         action.<br>
                                                         <font size="-1">The
+
 
 
 
@@ -933,6 +947,7 @@
 
 
 
+
         can jump to a line using the toolbar entry:</font><br>
       <img alt="jumptoline" src="gotolinefromtoolbar.png" width="736"
         height="358"><br>
@@ -961,7 +976,25 @@
         You can also turn on/off various bits and peices from the 'View'
         menu:<br>
         <img alt="" src="viewmenu.png" width="300" height="193"><br>
-      </font>
+        <br>
+      </font><b>Create </b><b>D</b><b>ocumentation with Doxygen</b><br>
+      <img alt="" src="docs.png" width="808" height="636"><br>
+      <font size="-1">You can create documentation for your code if you
+        have doxygen installed by selecting "Create Documentation" from
+        the 'File' menu, the documentation will be created in the
+        current folder and displayed with either the built in docviewer
+        or the system browser, the first time you run this there may be
+        a small delay while the initial files are created by doxygen,
+        after that selecting "Create Documentation" again just updates
+        the files, if there is not a file a called 'Doxyfile' in the
+        current folder a default config file is created for you, this
+        file can manually edited to suit your needs, I would recommend
+        that you also install Graphviz for the nice fancy flow charts,
+        most distros will have packages for these two apps.<br>
+        If doxygen is NOT installed you won't have a "Create
+        Documentation" menu, just install it and ( optionally ) Graphviz
+        and restart KKEdit and the menu will appear.</font><br>
+      <br>
       <hr size="2" width="100%"><a name="getanc"></a><b>Get it here!</b><b><br>
       </b> <b><a
           href="http://gtk-apps.org/content/show.php?content=158161">KKEdit</a></b><br>
@@ -992,6 +1025,7 @@
                             size="-1"><font size="-1">(</font></font></font></font></font><font
                       size="-1"><font size="-1"><font size="-1"><font
                             size="-1"><font size="-1"><font size="-1">optional
+
 
 
 
@@ -1074,10 +1108,12 @@
 
 
 
+
                                                           but
                                                           recommended)<br>
                                                           <br>
                                                         </font></font></font></font></font></font></font></font></font></font></font></font></font>&nbsp;</font></font></font></font></font></font></font></font></font></font></font></font>webkit
+
 
 
 
