@@ -1,4 +1,6 @@
 0.1.8
+Fixed goto define opening a file but not scrolling to the proper line.
+Goto define now searches for an exact match first and then the nearest match.
 Back now goes back after jumping to bookmark.
 Default doxygen config file copied to current folder when making documents if there is no file called 'Doxyfile'.
 Added Show/Hide docviewer to 'View' menu.
